<resources>
    <string name="app_name">时钟</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_add_alarm_cancel">取消</string>
    <string name="activity_add_alarm_confirm">确定</string>
    <string name="activity_add_alarm_repetition">重复：</string>
    <string name="activity_add_alarm_vibrate">震动：</string>
    <string name="activity_add_alarm_ring">铃声：</string>
    <string name="activity_add_alarm_monday">一</string>
    <string name="activity_add_alarm_tuesday">二</string>
    <string name="activity_add_alarm_wednesday">三</string>
    <string name="activity_add_alarm_thursday">四</string>
    <string name="activity_add_alarm_friday">五</string>
    <string name="activity_add_alarm_saturday">六</string>
    <string name="activity_add_alarm_sunday">日</string>
    <string name="chronograph_time">00:00</string>
    <string name="chronograph_start">开始</string>
    <string name="chronograph_pause">暂停</string>
    <string name="countdown_stop">停止</string>
</resources>
